# catbot-app

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  release.sh
assets/: main.css  todomvc.css
raw/: SOL_PERPS.psd
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assets.rs  feeder.rs  fetcher.rs  formatter.rs  jup.rs  lib.rs  main.rs  menu_handler.rs  ray.rs  runner.rs  settings.rs  setup.rs  token_registry.rs  tray.rs  tray_handler.rs
src-tauri/src/commands/: core.rs
src-tauri/src/jup/: mod.rs  perps.rs  prices.rs
src-tauri/tokens/: default.json  pairs.json
