[package]
name = "CatBoard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hello_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.12"
anyhow = "1.0.95"
wasm-timer = "0.2.5"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tokio = { version = "1.43.0", features = ["sync", "rt-multi-thread"] }
tauri-plugin-notification = "2.2.1"
image = "0.25.5"
log = "0.4.25"
chrono = "0.4.39"
env_logger = "0.11.6"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
